force-app/main/default/objects/Consultant__c/Consultant__c.object-meta.xml
<CustomObject>
    <label>Consultant</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Consultant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>