force-app/main/default/objects/Consultant__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultants</relationshipLabel>
    <relationshipName>Consultants</relationshipName>
    <type>Lookup</type>
</CustomField>