force-app/main/default/objects/Consultant__c/listViews/Male_Consultants.listView-meta.xml
<ListView>
    <fullName>Male_Consultants</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sex__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <label>Male Consultants</label>
</ListView>